# hiedcab_frontdoor_agent

./: .gitignore  README.md  RELEASE_NOTES.md  azure.yaml  docker-compose.yml
.claude/: settings.local.json
.specify/memory/: constitution.md
accelerator/: README.md
accelerator/docs/: CUSTOMIZATION.md  SAMPLE_CUSTOMIZATIONS.md
accelerator/infra/: main.bicep  main.parameters.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  action_agent.py  query_agent.py  router_agent.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  config.py  dependencies.py
backend/app/models/: __init__.py  enums.py  schemas.py
backend/app/services/: __init__.py  interfaces.py
backend/app/services/azure/: __init__.py  llm_service.py
backend/app/services/mock/: __init__.py  audit_log.py  knowledge_service.py  llm_service.py  session_store.py  ticket_service.py
backend/mock_data/: intent_examples.json  sample_kb_articles.json  sample_tickets.json
backend/tests/: conftest.py  test_agents.py  test_api_integration.py  test_evals.py  test_gpt4o_evals.py  test_models.py  test_spec_compliance.py
docs/customization/: CUSTOMIZATION.md  SAMPLE_CUSTOMIZATIONS.md
docs/deployment/: COST_ESTIMATION.md
docs/specs/: plan.md  quickstart.md  research.md  tasks.md
docs/specs/checklists/: requirements.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
specs/1-front-door-agent/: data-model.md  plan.md  spec.md  tasks.md
(+21 files in other folders)
